# TheVulkanTemple

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
docs/: flow_diagram.drawio
resources/models/Sphere/: Sphere.glb
resources/shaders/: gaussian_blur_x.comp.spv  gaussian_blur_y.comp.spv  light.frag.spv  light.vert.spv  pbr.frag.spv  pbr.vert.spv  shadow_map.frag.spv  shadow_map.vert.spv  smaa_blend.frag.spv  smaa_blend.vert.spv  smaa_edge.frag.spv  smaa_edge.vert.spv  smaa_weight.frag.spv  smaa_weight.vert.spv  tonemap.comp.spv  tonemap.frag.spv  tonemap.vert.spv
shaders/: gaussian_blur_x.comp.spv  light.frag.spv  light.vert.spv  luminance.comp.spv  pbr.frag.spv  pbr.vert.spv  shadow_map.frag.spv  shadow_map.vert.spv  smaa_edge.vert.spv  smaa_weight.frag.spv  smaa_weight.vert.spv  tonemap.frag.spv  tonemap.vert.spv
src/: base_vulkan_app.cpp  base_vulkan_app.h  camera.cpp  camera.h  example.cpp  fps_camera_control.cpp  fps_camera_control.h  gltf_model.cpp  graphics_module_vulkan_app.cpp  graphics_module_vulkan_app.h  light.cpp  light.h  magic_enum.hpp  main.cpp  vulkan_helper.cpp  vulkan_helper.h
src/TheVulkanTemple/: base_vulkan_app.cpp  base_vulkan_app.h  camera.cpp  camera.h  gltf_model.cpp  gltf_model.h  graphics_module_vulkan_app.cpp  graphics_module_vulkan_app.h  light.cpp  light.h  vk_buffers_suballocator.cpp  vk_buffers_suballocator.h  vk_model.cpp  vk_model.h  vma_wrapper.cpp  vma_wrapper.h  vulkan_helper.cpp  vulkan_helper.h
src/TheVulkanTemple/ffx_cacao/: ffx_cacao.cpp
src/TheVulkanTemple/ffx_cacao/PrecompiledShadersSPIRV/: CACAOApply_32.h  CACAOEdgeSensitiveBlur1_16.h  CACAOEdgeSensitiveBlur1_32.h  CACAOEdgeSensitiveBlur2_16.h  CACAOEdgeSensitiveBlur2_32.h  CACAOEdgeSensitiveBlur3_16.h  CACAOEdgeSensitiveBlur4_16.h  CACAOEdgeSensitiveBlur4_32.h  CACAOEdgeSensitiveBlur6_16.h  CACAOEdgeSensitiveBlur6_32.h  CACAOEdgeSensitiveBlur7_32.h  CACAOEdgeSensitiveBlur8_32.h  CACAOGenerateQ1_16.h  CACAOGenerateQ2_32.h  CACAOGenerateQ3Base_16.h  CACAOGenerateQ3Base_32.h  CACAOGenerateQ3_32.h  CACAONonSmartApply_16.h  CACAOPostprocessImportanceMapA_16.h  CACAOPostprocessImportanceMapB_16.h  CACAOPostprocessImportanceMapB_32.h  CACAOPrepareDownsampledDepthsAndMips_16.h  CACAOPrepareDownsampledDepthsAndMips_32.h  CACAOPrepareDownsampledDepthsHalf_32.h  CACAOPrepareDownsampledDepths_16.h  CACAOPrepareDownsampledNormalsFromInputNormals_16.h  CACAOPrepareDownsampledNormalsFromInputNormals_32.h  CACAOPrepareDownsampledNormals_32.h  CACAOPrepareNativeDepthsHalf_16.h  CACAOPrepareNativeDepthsHalf_32.h  CACAOPrepareNativeDepths_32.h  CACAOPrepareNativeNormalsFromInputNormals_16.h  CACAOPrepareNativeNormalsFromInputNormals_32.h  CACAOPrepareNativeNormals_32.h  CACAOUpscaleBilateral5x5Half_32.h  CACAOUpscaleBilateral5x5_16.h
src/TheVulkanTemple/hbao/: hbao_context.cpp  hbao_context.h
src/TheVulkanTemple/hdr_tonemap/: hdr_tonemap_context.cpp  hdr_tonemap_context.h
src/TheVulkanTemple/layers/amd_fsr/: amd_fsr.cpp  amd_fsr.h  ffx_fsr1.h
src/TheVulkanTemple/layers/hbao/: hbao_context.cpp  hbao_context.h
src/TheVulkanTemple/layers/hdr_tonemap/: hdr_tonemap_context.cpp  hdr_tonemap_context.h
src/TheVulkanTemple/layers/pbr/: pbr_context.cpp  pbr_context.h
src/TheVulkanTemple/layers/smaa/: smaa_context.cpp  smaa_context.h
src/TheVulkanTemple/layers/vsm/: vsm_context.cpp  vsm_context.h
src/TheVulkanTemple/shaders/: ColorSpaces.inc.glsl  SMAA.h  light.inc.glsl  lighting_helper.inc.glsl
src/TheVulkanTemple/shaders/amd_fsr/: fsr_easu_float.comp  fsr_easu_half.comp  fsr_rcas_float.comp  fsr_rcas_half.comp  inputs.inc.glsl
src/TheVulkanTemple/shaders/hbao/: depth_linearize.frag  hbao_blur.frag  hbao_blur_2.frag  hbao_calc.frag  hbao_deinterleave.frag  hbao_reinterleave.frag  view_normal.frag
src/TheVulkanTemple/shaders/hdr_tonemap/: tonemap.frag  tonemap.vert
src/TheVulkanTemple/shaders/light/: light.frag
src/TheVulkanTemple/smaa/: smaa_context.cpp  smaa_context.h
src/TheVulkanTemple/vsm/: vsm_context.cpp  vsm_context.h
src/ffx_cacao/: ffx_cacao.h  ffx_cacao_defines.h
src/ffx_cacao/PrecompiledShadersSPIRV/: CACAOApply_16.h  CACAOClearLoadCounter_16.h  CACAOClearLoadCounter_32.h  CACAOEdgeSensitiveBlur3_32.h  CACAOEdgeSensitiveBlur5_16.h  CACAOEdgeSensitiveBlur5_32.h  CACAOEdgeSensitiveBlur7_16.h  CACAOEdgeSensitiveBlur8_16.h  CACAOGenerateImportanceMap_16.h  CACAOGenerateImportanceMap_32.h  CACAOGenerateQ0_16.h  CACAOGenerateQ0_32.h  CACAOGenerateQ1_32.h  CACAOGenerateQ2_16.h  CACAOGenerateQ3_16.h  CACAONonSmartApply_32.h  CACAONonSmartHalfApply_16.h  CACAONonSmartHalfApply_32.h  CACAOPostprocessImportanceMapA_32.h  CACAOPrepareDownsampledDepthsHalf_16.h  CACAOPrepareDownsampledDepths_32.h  CACAOPrepareDownsampledNormals_16.h  CACAOPrepareNativeDepthsAndMips_16.h  CACAOPrepareNativeDepthsAndMips_32.h  CACAOPrepareNativeDepths_16.h  CACAOPrepareNativeNormals_16.h  CACAOUpscaleBilateral5x5Half_16.h  CACAOUpscaleBilateral5x5_32.h
src/hdr_tonemap/: hdr_tonemap.cpp  hdr_tonemap.h  hdr_tonemap_context.cpp  hdr_tonemap_context.h
src/shaders/: notes
src/shaders/HDR/: luminance.comp  tonemap.comp  tonemap.frag  tonemap.vert
src/shaders/Light/: light.frag  light.vert
src/shaders/PBR/: AshikhminShirleyBRDF.inc.glsl  BRDF.inc.glsl  CookTorranceBRDF.inc.glsl  Fresnel.inc.glsl  OrenNayarBRDF.inc.glsl  WalterBRDF.inc.glsl  pbr.frag  pbr.vert
src/shaders/SMAA/: SMAA.h  smaa_blend.frag  smaa_blend.vert  smaa_edge.frag  smaa_edge.vert  smaa_weight.frag  smaa_weight.vert
src/shaders/hdr_tonemap/: ColorSpaces.inc.glsl  tonemap.comp
src/shaders/light/: light.vert
src/shaders/pbr/: BRDF.inc.glsl  pbr.frag  pbr.vert
src/shaders/shadow_map/: gaussian_blur_x.comp  gaussian_blur_y.comp  shadow_map.frag  shadow_map.vert
src/shaders/smaa/: smaa_blend.frag  smaa_blend.vert  smaa_edge.frag  smaa_edge.vert  smaa_weight.frag  smaa_weight.vert
src/shaders/vsm/: gaussian_blur_x.comp  gaussian_blur_y.comp  shadow_map.frag  shadow_map.vert
src/smaa/: smaa_context.cpp  smaa_context.h
src/vsm/: vsm_context.cpp  vsm_context.h
(+13 files in other folders)
